kuberneters-manifests-basic/part-inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: part-inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: part-inventory-service
  template:
    metadata:
      labels:
        app: part-inventory-service
        version: v1
    spec:
      containers:
        - name: part-inventory-service
          image: ram1uj/part-inventory-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 5
            periodSeconds: 5
            initialDelaySeconds: 30
            timeoutSeconds: 2

          livenessProbe:
              httpGet:
                path: /actuator/health/liveness
                port: 8080
              initialDelaySeconds: 10
              periodSeconds: 10
              failureThreshold: 3
              timeoutSeconds: 2

          readinessProbe:
              httpGet:
                path: /actuator/health/readiness
                port: 8080
              periodSeconds: 5
              failureThreshold: 3
              initialDelaySeconds: 10
              timeoutSeconds: 2
