kuberneters-manifests-basic/part-order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: part-order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: part-order-service
  template:
    metadata:
      labels:
        app: part-order-service
    spec:
      containers:
        - name: part-order-service
          image: ram1uj/part-order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
