kuberneters-manifests-basic/part-inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: part-inventory-service
spec:
  selector:
    app: part-inventory-service
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30081
