kuberneters-manifests-basic/part-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: part-order-service
spec:
  selector:
    app: part-order-service
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30082
